--- a/style.css
+++ b/style.css
@@ -72,3 +72,14 @@ h6 {
   background-color: transparent;
   color: black;
 }
+
+table { border-collapse: collapse; }
+th { border-bottom: solid 1px #f00;
+  border-right: solid 1px #f00; 
+  border-left: solid 1px #f00; }
+td {
+  border-right: solid 1px #f00; 
+  border-left: solid 1px #f00;
+  padding-left: 4px;
+  padding-right: 4px;
+}
